--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
+        <activity android:name=".Circle.Video.VideoActivity"></activity>
+        <activity android:name=".Homepage.Videochat.VideochatActivity" />
+        <activity android:name=".Homepage.Control.ControlActivity" />
         <activity android:name=".LoginRegist.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,19 +33,21 @@
         </activity>
         <activity android:name=".LoginRegist.RegisterActivity" />
         <activity android:name=".LoginRegist.RemeberActivity" />
-
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name" />
         <activity android:name=".Circle.Upload.UploadActivity" />
+        <activity android:name=".Homepage.Homework.HomeworkActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <activity android:name=".Homepage.Homework.HomeworkActivity" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Homepage.Homework.RecordActivity" />
         <activity android:name=".Homepage.Message.MessageActivity" />
         <activity android:name=".Homepage.Module.ModuleActivity" />
-        <activity android:name=".Homepage.Watch.WatchActivity"/>
+        <activity android:name=".Homepage.Watch.WatchActivity" />
     </application>
 
 </manifest>
