--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".Circle.Video.VideoActivity"></activity>
-        <activity android:name=".Homepage.Videochat.VideochatActivity" />
-        <activity android:name=".Homepage.Control.ControlActivity" />
+        <activity android:name=".Circle.Upload.UploadActivity"/>
         <activity android:name=".LoginRegist.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,14 +34,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
-        <activity android:name=".Circle.Upload.UploadActivity" />
-        <activity android:name=".Homepage.Homework.HomeworkActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".Homepage.Homework.HomeworkActivity" />
+        <activity android:name=".Homepage.Videochat.VideochatActivity" />
+        <activity android:name=".Homepage.Control.ControlActivity" />
         <activity android:name=".Homepage.Homework.RecordActivity" />
         <activity android:name=".Homepage.Message.MessageActivity" />
         <activity android:name=".Homepage.Module.ModuleActivity" />
