--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".Circle.Upload.UploadActivity"/>
         <activity android:name=".LoginRegist.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,13 +33,16 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
+        <activity android:name=".Homepage.Homework.HwcheckActivity"/>
         <activity android:name=".Homepage.Homework.HomeworkActivity" />
+        <activity android:name=".Homepage.Homework.RecordActivity" />
         <activity android:name=".Homepage.Videochat.VideochatActivity" />
         <activity android:name=".Homepage.Control.ControlActivity" />
-        <activity android:name=".Homepage.Homework.RecordActivity" />
         <activity android:name=".Homepage.Message.MessageActivity" />
         <activity android:name=".Homepage.Module.ModuleActivity" />
         <activity android:name=".Homepage.Watch.WatchActivity" />
+        <activity android:name=".Circle.Video.VideoActivity" />
+        <activity android:name=".Circle.Upload.UploadActivity" />
     </application>
 
 </manifest>
