--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,26 +21,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".LoginRegist.LoginActivity">
-        </activity>
+        <activity android:name=".Homepage.LeftActs.DeviceActivity"></activity>
+        <activity android:name=".Homepage.LeftActs.AccountActivity" />
+        <activity android:name=".Homepage.LeftActs.PrivateActivity" />
+        <activity android:name=".Homepage.LeftActs.HelpActivity" />
+        <activity android:name=".Homepage.LeftActs.PurseActivity" />
+        <activity android:name=".Homepage.LeftActs.PersonActivity" />
+        <activity android:name=".Homepage.LeftActs.PublishActivity" />
+        <activity android:name=".LoginRegist.LoginActivity" />
         <activity android:name=".LoginRegist.RegisterActivity" />
         <activity android:name=".LoginRegist.RemeberActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Homepage.Homework.HwcheckActivity"/>
+        <activity android:name=".Homepage.Homework.HwcheckActivity" />
         <activity android:name=".Homepage.Homework.HomeworkActivity" />
         <activity android:name=".Homepage.Homework.RecordActivity" />
         <activity android:name=".Homepage.Videochat.VideochatActivity" />
         <activity android:name=".Homepage.Control.ControlActivity" />
         <activity android:name=".Homepage.Message.MessageActivity" />
-        <activity android:name=".Homepage.Module.ModuleActivity"/>
+        <activity android:name=".Homepage.Module.ModuleActivity" />
         <activity android:name=".Homepage.Watch.WatchActivity" />
         <activity android:name=".Circle.Video.VideoActivity" />
         <activity android:name=".Circle.Upload.UploadActivity" />
