--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".Homepage.LeftActs.PasswordActivity"></activity>
+        <activity android:name=".Discover.Cart.CartActivity">
+        </activity>
+        <activity android:name=".Homepage.LeftActs.PasswordActivity" />
         <activity android:name=".Homepage.LeftActs.DeviceActivity" />
         <activity android:name=".Homepage.LeftActs.AccountActivity" />
         <activity android:name=".Homepage.LeftActs.PrivateActivity" />
@@ -29,19 +31,17 @@
         <activity android:name=".Homepage.LeftActs.PurseActivity" />
         <activity android:name=".Homepage.LeftActs.PersonActivity" />
         <activity android:name=".Homepage.LeftActs.PublishActivity" />
-        <activity android:name=".LoginRegist.LoginActivity" >
+        <activity android:name=".LoginRegist.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".LoginRegist.RegisterActivity" />
         <activity android:name=".LoginRegist.RemeberActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name" />
         <activity android:name=".Homepage.Homework.HwcheckActivity" />
         <activity android:name=".Homepage.Homework.HomeworkActivity" />
         <activity android:name=".Homepage.Homework.RecordActivity" />
