--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".Discover.Cart.CartActivity">
-        </activity>
+        <activity android:name=".Circle.Friend.FriendActivity"></activity>
+        <activity android:name=".Discover.Cart.CartActivity"></activity>
         <activity android:name=".Homepage.LeftActs.PasswordActivity" />
         <activity android:name=".Homepage.LeftActs.DeviceActivity" />
         <activity android:name=".Homepage.LeftActs.AccountActivity" />
@@ -33,8 +33,9 @@
         <activity android:name=".Homepage.LeftActs.PublishActivity" />
         <activity android:name=".LoginRegist.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".LoginRegist.RegisterActivity" />
