--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".Circle.Video.GSYVideoActivity"></activity>
+        <activity android:name=".Circle.Video.GSYVideoActivity">
+        </activity>
         <activity android:name=".Circle.Friend.FriendActivity" />
         <activity android:name=".Discover.Cart.CartActivity" />
         <activity android:name=".Homepage.LeftActs.PasswordActivity" />
@@ -41,10 +42,7 @@
         </activity>
         <activity android:name=".LoginRegist.RegisterActivity" />
         <activity android:name=".LoginRegist.RemeberActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".Homepage.Homework.HwcheckActivity" />
+         <activity android:name=".Homepage.Homework.HwcheckActivity" />
         <activity android:name=".Homepage.Homework.HomeworkActivity" />
         <activity android:name=".Homepage.Homework.RecordActivity" />
         <activity android:name=".Homepage.Videochat.VideochatActivity" />
@@ -54,6 +52,7 @@
         <activity android:name=".Homepage.Watch.WatchActivity" />
         <activity android:name=".Circle.Video.VideoActivity" />
         <activity android:name=".Circle.Upload.UploadActivity" />
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
