--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
     
     // 帅死了的日历
     implementation 'com.haibin:calendarview:3.7.1'
+
+    // 扫描二维码
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
 }
