--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".Discover.MailActivity"></activity>
-        <activity android:name=".Circle.Video.GSYVideoActivity"></activity>
+        <activity android:name=".LoginRegist.InfoActivity"></activity>
+        <activity android:name=".LoginRegist.scan" />
+        <activity android:name=".LoginRegist.capture" />
+        <activity android:name=".Discover.MailActivity" />
+        <activity android:name=".Circle.Video.GSYVideoActivity" />
         <activity android:name=".Circle.Friend.FriendActivity" />
         <activity android:name=".Discover.Cart.CartActivity" />
         <activity android:name=".Homepage.LeftActs.PasswordActivity" />
@@ -50,7 +53,7 @@
         <activity android:name=".Homepage.Module.ModuleActivity" />
         <activity android:name=".Homepage.Watch.WatchActivity" />
         <activity android:name=".Circle.Upload.UploadActivity" />
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
