--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,7 @@ dependencies {
 
     // 扫描二维码
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    
+    // 城市选择器
+    implementation 'com.github.crazyandcoder:citypicker:6.0.2'
 }
