--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.learningmachineparentsapp">
 
     <uses-feature android:name="android.hardware.camera" />
@@ -19,8 +20,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        tools:replace="android:theme"
         android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".LoginRegist.InfoActivity"></activity>
+        <activity android:name=".LoginRegist.InfoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter></activity>
         <activity android:name=".LoginRegist.scan" />
         <activity android:name=".LoginRegist.capture" />
         <activity android:name=".Discover.MailActivity" />
@@ -36,11 +43,6 @@
         <activity android:name=".Homepage.LeftActs.PersonActivity" />
         <activity android:name=".Homepage.LeftActs.PublishActivity" />
         <activity android:name=".LoginRegist.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".LoginRegist.RegisterActivity" />
         <activity android:name=".LoginRegist.RemeberActivity" />
