--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,10 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
-        applicationId "com.example.learningmachineparentsapp"
+        //applicationId "com.example.learningmachineparentsapp"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -45,7 +45,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+ 
     // 图片加载库
     implementation('com.github.bumptech.glide:glide:4.12.0') {
         exclude group: "com.android.support"
