--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        tools:replace="android:theme"
-        android:theme="@style/Theme.LearningMachineParentsAPP">
-        <activity android:name=".LoginRegist.InfoActivity"></activity>
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.LearningMachineParentsAPP"
+        tools:replace="android:theme">
+        <activity android:name=".Discover.GoodsDetailActivity"></activity>
+        <activity android:name=".LoginRegist.InfoActivity" />
         <activity android:name=".LoginRegist.scan" />
         <activity android:name=".LoginRegist.capture" />
         <activity android:name=".Discover.MailActivity" />
@@ -48,12 +50,11 @@
         <activity android:name=".LoginRegist.RemeberActivity" />
         <activity android:name=".Homepage.Homework.HwcheckActivity" />
         <activity android:name=".Homepage.Homework.HomeworkActivity" />
-        <activity android:name=".Homepage.Homework.RecordActivity">
-        </activity>
+        <activity android:name=".Homepage.Homework.RecordActivity"></activity>
         <activity android:name=".Homepage.Videochat.VideochatActivity" />
-        <activity android:name=".Homepage.Control.ControlActivity" ></activity>
+        <activity android:name=".Homepage.Control.ControlActivity" />
         <activity android:name=".Homepage.Message.MessageActivity" />
-        <activity android:name=".Homepage.Module.ModuleActivity" ></activity>
+        <activity android:name=".Homepage.Module.ModuleActivity" />
         <activity android:name=".Homepage.Watch.WatchActivity" />
         <activity android:name=".Circle.Upload.UploadActivity" />
         <activity android:name=".MainActivity" />
