--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         //applicationId "com.example.learningmachineparentsapp"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
+        versionCode 2
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -100,4 +100,20 @@ dependencies {
     
     // 城市选择器
     implementation 'com.github.crazyandcoder:citypicker:6.0.2'
+    
+    // 申请权限
+    implementation 'com.yanzhenjie:permission:2.0.3'
+
+    // webrtc
+    implementation 'org.webrtc:google-webrtc:1.0.28513'
+    implementation 'org.java-websocket:Java-WebSocket:1.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // 扫码
+    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+
+    // 版本更新
+    implementation 'org.xutils:xutils:3.3.40'
+    implementation 'com.github.LuoGuoXin:BaseAndroid:1.0.5'
 }
