--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.learningmachineparentsapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.example.learningmachineparentsapp">
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
-    <application
-        android:name=".MyApp"
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+    <application android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,41 +26,46 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.LearningMachineParentsAPP"
         tools:replace="android:theme">
-        <activity android:name=".Discover.GoodsDetailActivity"></activity>
-        <activity android:name=".LoginRegist.InfoActivity" />
-        <activity android:name=".LoginRegist.scan" />
-        <activity android:name=".LoginRegist.capture" />
-        <activity android:name=".Discover.MailActivity" />
-        <activity android:name=".Circle.Video.GSYVideoActivity" />
-        <activity android:name=".Circle.Friend.FriendActivity" />
-        <activity android:name=".Discover.Cart.CartActivity" />
-        <activity android:name=".Homepage.LeftActs.PasswordActivity" />
-        <activity android:name=".Homepage.LeftActs.DeviceActivity" />
-        <activity android:name=".Homepage.LeftActs.AccountActivity" />
-        <activity android:name=".Homepage.LeftActs.PrivateActivity" />
-        <activity android:name=".Homepage.LeftActs.HelpActivity" />
-        <activity android:name=".Homepage.LeftActs.PurseActivity" />
-        <activity android:name=".Homepage.LeftActs.PersonActivity" />
-        <activity android:name=".Homepage.LeftActs.PublishActivity" />
+        <activity android:name=".Discover.GoodsDetailActivity"/>
+        <activity android:name=".LoginRegist.InfoActivity">
+
+        </activity>
+        <activity android:name=".LoginRegist.scan"/>
+        <activity android:name=".LoginRegist.capture"/>
+        <activity android:name=".Discover.MailActivity"/>
+        <activity android:name=".Circle.Video.GSYVideoActivity"/>
+        <activity android:name=".Circle.Friend.FriendActivity"/>
+        <activity android:name=".Discover.Cart.CartActivity"/>
+        <activity android:name=".Homepage.LeftActs.PasswordActivity"/>
+        <activity android:name=".Homepage.LeftActs.DeviceActivity"/>
+        <activity android:name=".Homepage.LeftActs.AccountActivity"/>
+        <activity android:name=".Homepage.LeftActs.PrivateActivity"/>
+        <activity android:name=".Homepage.LeftActs.HelpActivity"/>
+        <activity android:name=".Homepage.LeftActs.PurseActivity"/>
+        <activity android:name=".Homepage.LeftActs.PersonActivity"/>
+        <activity android:name=".Homepage.LeftActs.PublishActivity"/>
+
         <activity android:name=".LoginRegist.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".LoginRegist.RegisterActivity" />
-        <activity android:name=".LoginRegist.RemeberActivity" />
-        <activity android:name=".Homepage.Homework.HwcheckActivity" />
-        <activity android:name=".Homepage.Homework.HomeworkActivity" />
-        <activity android:name=".Homepage.Homework.RecordActivity"></activity>
-        <activity android:name=".Homepage.Videochat.VideochatActivity" />
-        <activity android:name=".Homepage.Control.ControlActivity" />
-        <activity android:name=".Homepage.Message.MessageActivity" />
-        <activity android:name=".Homepage.Module.ModuleActivity" />
-        <activity android:name=".Homepage.Watch.WatchActivity" />
-        <activity android:name=".Circle.Upload.UploadActivity" />
-        <activity android:name=".MainActivity" />
-    </application>
 
+        <activity android:name=".LoginRegist.RegisterActivity"></activity>
+        <activity android:name=".LoginRegist.RemeberActivity"/>
+        <activity android:name=".Homepage.Homework.HwcheckActivity"/>
+        <activity android:name=".Homepage.Homework.HomeworkActivity"/>
+        <activity android:name=".Homepage.Homework.RecordActivity"/>
+        <activity android:name=".Homepage.Videochat.VideochatActivity"/>
+        <activity android:name=".Homepage.Control.ControlActivity"/>
+        <activity android:name=".Homepage.Message.MessageActivity"/>
+        <activity android:name=".Homepage.Module.ModuleActivity"/>
+        <activity android:name=".Homepage.Watch.WatchActivity"/>
+        <activity android:name=".Circle.Video.Upload.UploadActivity"/>
+        <activity android:name=".MainActivity"></activity>
+        <service android:name=".webrtc.rtc.MyWebSocketService"/>
+        <activity android:name=".webrtc.monitor.MonitorActivity"/>
+        <activity android:name=".webrtc.video_call.VideoCallActivity"/>
+    </application>
 </manifest>
